# rwm-pt-pytorch

./: .gitignore  GPU_QUICKSTART.md  LICENSE  README.md  SUMMARY.md  convergence_experiment.py  demo_standard_rwm.py  example_pt_gpu.py  experiment.py  experiment_RWM.py  experiment_RWM_GPU.py  experiment_many.py  experiment_pt.py  experiment_pt_GPU.py  plot.py  pt_script.sh  pyproject.toml  quick_test.py  quick_test_optimizations.py  requirements.txt  run_pt_dcs.sbatch  run_pt_gpu.sbatch  run_pt_vi.sbatch  run_rwm_gpu.sbatch  run_rwm_gpu_dcs.sbatch  run_rwm_gpu_vi.sbatch  rwm_script.sh  sample_script.py  single_run_experiment.py  test_gpu_optimization.py  test_pt_gpu.py  test_pt_gpu_advanced.py  test_standard_rwm.py
algorithms/: CLAUDE.md  Metropolis Algorithm.py  __init__.py  pt_rwm.py  pt_rwm_gpu_optimized.py  rwm.py  rwm_gpu.py  rwm_gpu_optimized.py
data/: CLAUDE.md  EvenRosenbrock_Normal_RWM_GPU_dim10_1000000iters_seed1.json  EvenRosenbrock_Normal_RWM_GPU_dim10_1000000iters_seed10.json  EvenRosenbrock_Normal_RWM_GPU_dim10_1000000iters_seed11.json  EvenRosenbrock_Normal_RWM_GPU_dim10_1000000iters_seed12.json  EvenRosenbrock_Normal_RWM_GPU_dim10_1000000iters_seed13.json  EvenRosenbrock_Normal_RWM_GPU_dim10_1000000iters_seed14.json  EvenRosenbrock_Normal_RWM_GPU_dim10_1000000iters_seed15.json  EvenRosenbrock_Normal_RWM_GPU_dim10_1000000iters_seed16.json  EvenRosenbrock_Normal_RWM_GPU_dim10_1000000iters_seed17.json  EvenRosenbrock_Normal_RWM_GPU_dim10_1000000iters_seed18.json  EvenRosenbrock_Normal_RWM_GPU_dim10_1000000iters_seed2.json  (+3365 more)
images/: CLAUDE.md
(+59 files in other folders)
