[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rwm-pt-pytorch"
version = "0.1.0"
description = "Random Walk Metropolis and Parallel Tempering experiments implemented with PyTorch."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Aidan Li" }
]
keywords = ["mcmc", "parallel-tempering", "random-walk-metropolis", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.23",
  "scipy>=1.10",
  "torch>=2.0",
  "torchvision>=0.15",
  "torchaudio>=2.0",
  "tqdm>=4.64"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.3",
  "black>=23.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["algorithms*", "interfaces*", "proposal_distributions*", "target_distributions*"]
exclude = ["tests*", "data*", "images*"]
